--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -8,12 +8,14 @@ body {
                         /*NAVBAR STARTS*/
   
   #navbar {
-    background-color: #333;
+    position: fixed;
+    background-color:	rgb(248,248,248);
     overflow: hidden;
-  
-  
-    height: 75px;
+    height: 11vh;
+    width: 100vw;
+    z-index: 1;
   }
+
   #logo{
   float:left;
   margin-right: 20px;  
@@ -46,7 +48,7 @@ body {
   
   li  {
     display: block;
-    color: white;
+    color: black;
     text-align: center;
     padding: 17px 23px;
     margin-top: 11px;
@@ -70,5 +72,7 @@ body {
     border: none;
     width: 400px;
     text-align: left;
-    border-radius: 5px;
+    border-radius: 3vh;
+    background-color :rgb(232,232,232);
+    outline: none;
   }
