--- a/src/Pages/Index_Page/Index_page.css
+++ b/src/Pages/Index_Page/Index_page.css
@@ -97,9 +97,10 @@ body{
   font-weight: 700;
   margin: 17px;
   font-size: 1.5rem;
-   
+   transition: all 0.3s ease-in;
   border-radius: 36px;
   cursor:pointer;
+  border: none;
 }
 .btn1:hover{
   background-color: whitesmoke;
