--- a/src/Pages/Home/Carousel.css
+++ b/src/Pages/Home/Carousel.css
@@ -25,8 +25,9 @@
   box-shadow: 0px 0px 11px 3px rgba(0, 0, 0, 0.15);
   opacity: 0;
   pointer-events: none;
-  transform: scale(0.95);
-  transition: 0.5s ease-in-out;
+  transform: scale(0.98);
+  transition: 0.3s ease-in-out; 
+  
 }
 
 .carousel_card-active {
@@ -61,7 +62,7 @@
   position: absolute;
   font-size: 40px;
   top: 50%;
-  transform: translate(0, -50%);
+  transform: translate(0%, -50%);
   background-color: gainsboro;
   display: flex;
   justify-content: center;
