--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -8,29 +8,50 @@ body {
                         /*NAVBAR STARTS*/
   
   #navbar {
-    background-color: #333;
-    overflow: hidden;
-  
-  
-    height: 75px;
+    background-color: whitesmoke;
+    
+    position: sticky;
+    top: 0%;
+  z-index: 999;
+    height: 79px;
+  }
+  .active{
+    background-color: #ddd;
+    color: black;
   }
   #logo{
   float:left;
   margin-right: 20px;  
+  border-radius: 50%;
   }
   #sign{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     float:right;
     margin-right: 20px;  
     border-radius: 50%;
     }
-  
+  .user_name{
+    color: #333;
+    font-size: 12px;
+    font-weight: 400;
+    text-align: center;
+    margin: 0px;
+    padding: 0px;
+  }
   #logo img, #sign img{
     height: 45px;
-    margin: 3px 0px;
+    margin: 3px;
     padding: 14px 12px;
     width:auto;
+    border-radius: 50%;
   }
   #sign img{
+    margin-top: 10px;
+    height: 35px;
+    width: 35px;
+    padding: 0px;
     border-radius: 50%;
   }
   ul {
@@ -46,7 +67,8 @@ body {
   
   li  {
     display: block;
-    color: white;
+    color: #333;
+    font-weight: 400;
     text-align: center;
     padding: 17px 23px;
     margin-top: 11px;
@@ -55,20 +77,26 @@ body {
   }
   
   li:hover {
-    background-color: #ddd;
-    color: black;
+    background-color: #b8b0b0;
+    color: white;
   }
-  .search-panel {
+  #search-panel {
     float: left;
     margin: 9px;
-
+border: 1px solid #a48139;
     margin-top: 20px;
+   
+    border-radius: 5px;
   }
   
-  .search-input {
+  #search-input {
     padding: 10px;
     border: none;
     width: 400px;
+   
     text-align: left;
     border-radius: 5px;
   }
+  
+  
+ 
