--- a/src/Pages/Home/Modal.css
+++ b/src/Pages/Home/Modal.css
@@ -1,17 +1,7 @@
 
-
-
 body.active-modal{
     overflow-y: hidden;
 }
-.btn-model{
-padding: 10px 20px;
-display: block;
-margin: 100px auto 0;
-font-size: 18px;
-
-}
-
 .modal, .overlay{
     width: 100vw;
     height: 100vh;
@@ -28,35 +18,18 @@ font-size: 18px;
     
 }
 
-.title{
-    font-family: sans-serif;
-    margin-bottom: 20px;
-    font-weight: 900;
-    font-size: 30px;
-    margin-top: 20px;
-}
-form{
-    display: flex;
-    flex-direction: column;
-}
-#phone_no{
-    width: 125px;
-}
-.form_input {
-   margin-bottom: 14px;
-   text-align: left;
-    height: 35px;
-    width: 499px;
-    font-size: 16px;
-    border-radius: 3px;
-    border: 2px solid rgb(221, 213, 213);
-}
-.form_textarea{
-    font-family: 'Poppins', sans-serif;
-    text-align: left;
-    margin-bottom: 14px;    
-     width: 499px;
-     font-size: 16px;
-     border-radius: 3px;
-     border: 2px solid rgb(221, 213, 213);
+.modal-content {
+    position: absolute;
+    /* top: 20%;
+    left: 30%; */
+    
+     transform: translate(80%, 10%); 
+    line-height: 1.4;
+   background-color: #f1f1f1;
+    padding: 14px 38px;
+   border-radius: 80px;
+    box-shadow: 0px 8px 16px rgba(0,0,0, 0.3);
+    max-width: 900px;
+    min-width: 300px;
+
 }
