--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -42,23 +42,25 @@ body {
     
     .suggestion-content{ 
     
-       width: 620px;
+       width: 545px;
        height: 350px;
        border-radius: 40px;
       margin: 1px;
       margin-top: 25px;
       padding: 20px;
       font-size: 20px;
+      display: flex;
+      flex-direction: column;
     
     }
     
     .para_S{
       padding-top: 15px;
-      margin-left: 0px;
+     
       justify-content: left;
     }
     
-    #suggestion-box {
+    #suggestion-form {
       width: 400px;
       margin: 50px auto;
       padding: 20px;
