--- a/src/Pages/Index_Page/Index_page.css
+++ b/src/Pages/Index_Page/Index_page.css
@@ -15,18 +15,23 @@ code {
 body{
   background-color: whitesmoke;
   text-align: center;
+
+  
 }
 * {
     margin: 0px;
   text-align: center;
+  
+
+
 }
 
 #logo1{
   display: flex;
-  left: 43.8%;
+  left: 44.8%;
   top: 1%;
-  height: 170px;
-  width: 170px;
+  height: 150px;
+  width: 150px;
   border-radius: 50%;
   position: absolute;
   margin-top: 10px;
@@ -37,9 +42,10 @@ body{
   overflow-wrap: break-word;
  
   color: #2d777c;
-  margin-top: 210px;
+  margin-top: 170px;
+  margin-bottom: 10px;
   text-align: center;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 700;
 }
 
@@ -47,26 +53,41 @@ body{
 
 .item{ 
  
-  width: 200px;
-   height: 100px;
+  width: 180px;
+   height: 134px;
    display: flex;
+   flex-direction: column;
   text-align: center;
   justify-content: center;
   align-items: center;
   font-family: Verdan;
   border-radius: 10px;
-  margin: 15px;
-  margin-top: 25px;
+  margin: 12px;
+  /* margin-top: 25px; */
   padding: 20px;
-  font-size: 17px;
+  font-size: 11px;
   text-transform: uppercase;
-  box-shadow: 0 0 100px rgba(0, 0, 0, 0.2);
+  /* box-shadow: 0 0 100px rgba(0, 0, 0, 0.2); */
+  border-radius: 14px;
+  background: linear-gradient(145deg, #e8eae8, #fbfffe); 
+/*box-shadow:  13px 13px 26px #b5b9b6,
+             -13px -13px 26px #ffffff; */
+             box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+             
 }
 .item:hover {
-  transform: scale(1.15);
-  
-  background-color: rgb(193, 188, 180);
-  transition: all 0.6s ease;
+  transform: scale(1.02);
+  /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset; */
+  /* background-color: rgb(209, 204, 197); */
+  box-shadow:  13px 13px 26px #b5b9b6,
+             -13px -13px 26px #ffffff; 
+  transition: all 0.4s ease-in-out;
+}
+.box-title{
+  margin: 10px 0px 0px 0px;
+  font-family:sans-serif;
+  font-size: 12px;
+  font-weight: 500;
 }
 #boxrow1{
   display: flex;
@@ -84,7 +105,12 @@ body{
   
 }
 
-
+#logo2{
+  height: 130px;
+  width: 130px;
+  border-radius: 50%;
+ opacity: 0.8;
+}
 
 .btn1{
   padding: 16px 20px;
@@ -96,7 +122,7 @@ body{
   color: white;*/
   font-weight: 700;
   margin: 17px;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
    transition: all 0.3s ease-in;
   border-radius: 36px;
   cursor:pointer;
