--- a/src/Pages/Index_Page/Modal.css
+++ b/src/Pages/Index_Page/Modal.css
@@ -1,17 +1,11 @@
 
 
 
-body.active-modal{
+body .active-modal{
     overflow-y: hidden;
 }
 
-.btn-model{
-padding: 10px 20px;
-display: block;
-margin: 100px auto 0;
-font-size: 18px;
 
-}
 
 .modal, .overlay{
     width: 100vw;
@@ -25,39 +19,23 @@ font-size: 18px;
 }
 .overlay{
     background: rgba(49,49,49,0.8);
+}
 
+.modal-content {
+    position: absolute;
+    /* top: 20%;
+    left: 30%; */
+    border-radius: 10px;
+     transform: translate(80%, 10%); 
+    line-height: 1.4;
+   background-color: #f1f1f1;
+    padding: 14px 38px;
+   border-radius: 20px;
+    box-shadow: 0px 8px 16px rgba(0,0,0, 0.3);
+    /* max-width: 900px;
+    min-width: 300px; */
     
-}
+  
 
-.title{
-    font-family: sans-serif;
-    margin-bottom: 20px;
-    font-weight: 900;
-    font-size: 30px;
-    margin-top: 20px;
-}
-form{
-    display: flex;
-    flex-direction: column;
-}
 
-.form_input {
-
-   margin-bottom: 14px;
-   text-align: left;
-    height: 35px;
-    width: 499px;
-    font-size: 16px;
-    border-radius: 3px;
-    border: 2px solid rgb(221, 213, 213);
-}
-.form_textarea{
-   
-    font-family: 'Poppins', sans-serif;
-    text-align: left;
-    margin-bottom: 14px;    
-     width: 499px;
-     font-size: 16px;
-     border-radius: 3px;
-     border: 2px solid rgb(221, 213, 213);
 }
