--- a/src/components/popup.css
+++ b/src/components/popup.css
@@ -1,19 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-.modal-content {
-    position: absolute;
-    /* top: 20%;
-    left: 30%; */
-    border-radius: 10px;
-     transform: translate(80%, 10%); 
-    line-height: 1.4;
-   background-color: #f1f1f1;
-    padding: 14px 38px;
-   border-radius: 20px;
-    box-shadow: 0px 8px 16px rgba(0,0,0, 0.3);
-    max-width: 900px;
-    min-width: 300px;
 
-}
 #cross_img{
     height: 20px;
     width: 20px;
@@ -30,19 +16,70 @@
     padding: 6px 10px;
     background-color: #f1f1f1;
 }
+form{
+    display: flex;
+    flex-direction: column;
+}
+/* #phone_no{
+    width: 125px;
+} */
+.title{
+    font-family: sans-serif;
+    margin-bottom: 20px;
+    font-weight: 900;
+    font-size: 30px;
+    margin-top: 20px;
+}
 
+.form_label {
+    
+    margin-left: 0px;
+      width: fit-content;
+      margin-bottom: 4px;
+      font-size: 17px;
+        font-weight: 500;
+    }
+
+.form_input {
+   margin-bottom: 14px;
+   text-align: left;
+    height: 35px;
+    width: 499px;
+    font-size: 16px;
+    border-radius: 3px;
+    border: 2px solid rgb(221, 213, 213);
+}
+.form_textarea{
+    font-family: 'Poppins', sans-serif;
+    text-align: left;
+    margin-bottom: 14px;    
+     width: 499px;
+     font-size: 16px;
+     border-radius: 3px;
+     border: 2px solid rgb(221, 213, 213);
+}
+.btn-container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+option{
+    text-align: left;
+   
+}
 .form_sub{
     outline: none;
     height: 40px;
     text-align: center;
-    width: 230px;
+    width: 180px;
     border-radius: 40px;
    background-color: #1ECD97;
     color: #fff;
    
     font-size: 15px;
     font-weight: bold;
-    margin-left: 28%;
+    /* margin-left: 28%; */
     margin-top: 10px;
     cursor: pointer;
     border: 2px solid #1ECD97;
@@ -54,11 +91,5 @@
     color: #1ECD97;
     border: 2px solid #1ECD97;
 }
-.form_label {
-    
-margin-left: 0px;
-  width: fit-content;
-  margin-bottom: 4px;
-  font-size: 17px;
-    font-weight: 500;
-}
+
+
