--- a/src/components/popup.css
+++ b/src/components/popup.css
@@ -82,7 +82,7 @@ option{
     /* margin-left: 28%; */
     margin-top: 10px;
     cursor: pointer;
-    border: 2px solid #1ECD97;
+    border: 2px solid #35cd1e;
     transition: all 0.25s ease;
 
 }
