--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -5,7 +5,118 @@ body {
     background-color: white;
   }
   
-   
+                             /*  Carousel starts     */
+  .carousel {
+ position: relative;
+
+  display: flex;
+  height: 620px;
+  width: 100%;
+ 
+}
+
+.carousel_wrapper {
+  position: relative;
+  width: 100%;
+  height: 620px;
+}
+
+.carousel_card {
+  display: flex;
+  flex: 1;
+  position: absolute;
+  width: 100%;
+  height: 620px;
+  overflow: hidden;
+
+  -webkit-box-shadow: 0px 0px 11px 3px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 0px 11px 3px rgba(0, 0, 0, 0.15);
+  opacity: 0;
+  pointer-events: none;
+  transform: scale(0.98);
+  transition: 0.3s ease-in-out; 
+  
+}
+
+.carousel_card-active {
+  opacity: 1;
+  transform: scale(1);
+  pointer-events: visible;
+}
+
+.card_image {
+  width: 100%;
+  height: 620px;
+  object-fit: cover;
+}
+
+.card_overlay {
+  position: absolute;
+  width: 0px;
+  height: 0px;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+
+  align-items: flex-end;
+}
+
+.card_title {
+  color: white;
+  font-size: 30px;
+}
+
+.carousel_arrow_left,
+.carousel_arrow_right {
+  position: absolute;
+  font-size: 40px;
+  top: 50%;
+  transform: translate(0%, -50%);
+  background-color: gainsboro;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  padding-bottom: 11px;
+  cursor: pointer;
+}
+
+.carousel_arrow_left {
+  left: 15px;
+}
+
+.carousel_arrow_right {
+  right: 15px;
+}
+
+.carousel_pagination {
+  position: absolute;
+  bottom: 5px;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+
+.pagination_dot {
+  height: 10px;
+  width: 10px;
+  background-color: #f5f5f5;
+  border-radius: 50%;
+  display: inline-block;
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+.pagination_dot:hover {
+  transform: scale(1.2);
+}
+
+.pagination_dot-active {
+  background-color: steelblue;
+}
+
+                               /*  Carousel ends     */
+                           /*  Goal Starts  */
   .grid-container{
     display: grid;
     grid-gap: 1rem;
@@ -24,25 +135,26 @@ body {
     .img2{
     height: 175px;
     width: 175px;
-   
+    transition: all 0.1s ease-in;
     border-radius: 18px;
     }
     .img2:hover{
       transform: scale(1.05);
       cursor: pointer;
     }
+                               /*  Goal Ends  */
                         /* suggestion box starts*/
     
     .suggestion-container{
       display: flex;
       flex-wrap: wrap;
-      flex-direction: row;
+
       justify-content: center;
     }
     
     .suggestion-content{ 
     
-       width: 545px;
+       width: 544px;
        height: 350px;
        border-radius: 40px;
       margin: 1px;
@@ -55,9 +167,9 @@ body {
     }
     
     .para_S{
-      padding-top: 15px;
-     
-      justify-content: left;
+      padding-top: 10px;
+     text-align: justify;
+      /* justify-content: left; */
     }
     
     #suggestion-form {
@@ -66,7 +178,8 @@ body {
       padding: 20px;
       border-radius: 10px;
       background-color: #fff;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
+      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     }
     
     form {
