--- a/src/Pages/Index_Page/Index_page.css
+++ b/src/Pages/Index_Page/Index_page.css
@@ -16,7 +16,6 @@ body{
   background-color: whitesmoke;
   text-align: center;
 
-  
 }
 * {
     margin: 0px;
@@ -40,7 +39,9 @@ body{
 
 #name_1{
   overflow-wrap: break-word;
- 
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
   color: #2d777c;
   margin-top: 170px;
   margin-bottom: 10px;
@@ -53,8 +54,8 @@ body{
 
 .item{ 
  
-  width: 180px;
-   height: 134px;
+  width: 175px;
+   height: 130px;
    display: flex;
    flex-direction: column;
   text-align: center;
