--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -9,7 +9,8 @@ body {
   
   #navbar {
     background-color: whitesmoke;
-    
+   
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     position: sticky;
     top: 0%;
   z-index: 999;
@@ -69,6 +70,7 @@ body {
     display: block;
     color: #333;
     font-weight: 400;
+    font-size: 17px;
     text-align: center;
     padding: 17px 23px;
     margin-top: 11px;
