--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -20,11 +20,13 @@ body {
     background-color: #ddd;
     color: black;
   }
-  #logo{
+  #logo-container{
+    display: flex;
   float:left;
   margin-right: 20px;  
   border-radius: 50%;
   }
+  
   #sign{
     display: flex;
     flex-direction: column;
@@ -41,12 +43,15 @@ body {
     margin: 0px;
     padding: 0px;
   }
-  #logo img, #sign img{
+  #logo, #sign img{
     height: 45px;
     margin: 3px;
-    padding: 14px 12px;
+    padding-top: 14px;
     width:auto;
     border-radius: 50%;
+  }
+  #logo{
+    margin-left: 20px;
   }
   #sign img{
     margin-top: 10px;
@@ -54,6 +59,13 @@ body {
     width: 35px;
     padding: 0px;
     border-radius: 50%;
+  }
+  #text-image{
+    height: 45px;
+    width: 140px;
+    padding: 16px 12px;
+  margin: 0px;  
+  border-radius: 0%;
   }
   ul {
     list-style-type: none;
@@ -94,7 +106,7 @@ border: 1px solid #a48139;
   #search-input {
     padding: 10px;
     border: none;
-    width: 400px;
+    width: 300px;
    
     text-align: left;
     border-radius: 5px;
