--- a/src/Pages/Donation/donation.css
+++ b/src/Pages/Donation/donation.css
@@ -1,8 +1,22 @@
+.donation-image-container{
+    width:100%;
+    height: 620px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.donate-img{
+height: 100%;
+width: 93%;
+border-radius: 10px;
+}
 .why-donate-Us-container{
     display: flex;
-    
+    justify-content: center;
+    gap: 2rem;
+    margin-top: -20px;
     /* flex-direction: row; */
-    justify-content: space-around;
+    /* justify-content: space-around; */
 }
 
 .why-donate-Us-content{ 
@@ -18,18 +32,19 @@
   
 }
 #donate-text{
-    color: #eeee33;
+    color: #3371ee;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 #payment{
     font-size: 16px;
     margin: 5px;
 }
+
  .para_D{
   font-family: Poppins;
   width: 570px;
   text-align: left;
-font-size: 18px;
+font-size: 14px;
 margin-bottom: 20px;
 
 /* margin: 0px;
@@ -42,6 +57,11 @@ padding: 0px; */
     margin-top: 90px;
     padding: 30px;
     border-radius: 12px;
+}
+.pan-field{
+    display: flex;
+    flex-direction: column;
+    margin-left: 2px;
 }
 .checkbox-container{
     display: flex;
@@ -59,17 +79,32 @@ padding: 0px; */
     font-size: 14px;
     text-align: left;
 }
+.request{
+    height: auto;
+    width: 450px;
+    font-size: 14px;
+    text-align: left;
+    margin-bottom: 20px;
+    color: red;
+    font-weight: 700;
+}
 .form-image{
-    width: 500px;
-    height: 50px;
-    margin-top: 10px;
+    width: 400px;
+    height: 40px;
+    margin: 10px;
+}
+.parikranti-image{
+    width: 160px;
+    height: 40px;
+    margin-left: 142px;
+    margin-bottom: 10px;
 }
 
 .donate{
     outline: none;
     height: 40px;
     text-align: center;
-    width: 220px;
+    width: 200px;
     border-radius: 40px;
    background-color: #eeee33;
     color: #251f0a;
@@ -77,7 +112,7 @@ padding: 0px; */
     font-size: 15px;
     font-weight: 700;
     /* margin-left: 28%; */
-    margin-top: 10px;
+    margin: 10px 10px 10px 10px;
     cursor: pointer;
     border: 2px solid #eeee33;
     transition: all 0.25s ease;
@@ -86,5 +121,5 @@ padding: 0px; */
 .donate:hover{
     background: #fff;
     color: #251f0a;
-    border: 2px solid #eeee83;
+    border: 3px solid #eeee83;
 }
