--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -75,10 +75,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 30px;
-  height: 30px;
+  width: 45px;
+  height: 45px;
   border-radius: 50%;
-  padding-bottom: 11px;
+  padding: 0px 0px 5px 5px;
   cursor: pointer;
 }
 
@@ -130,13 +130,13 @@ body {
     font-size: 60px;
     margin-top: 50px;
     margin-bottom: 40px;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: sans-serif,'Arial', Times, serif;
     }                          
     .img2{
     height: 175px;
     width: 175px;
     transition: all 0.1s ease-in;
-    border-radius: 18px;
+    border-radius: 15px;
     }
     .img2:hover{
       transform: scale(1.05);
@@ -160,16 +160,17 @@ body {
       margin: 1px;
       margin-top: 25px;
       padding: 20px;
-      font-size: 20px;
+      font-size: 18px;
       display: flex;
       flex-direction: column;
     
     }
     
     .para_S{
-      padding-top: 10px;
+      padding-top: 0px;
      text-align: justify;
       /* justify-content: left; */
+      font-family: 'Poppins';
     }
     
     #suggestion-form {
@@ -196,8 +197,8 @@ body {
     option{
       font-size: 15px;
     }
-    select,
-    textarea {
+   .sugg-select,
+   textarea {
       width: calc(100% - 12px);
       padding: 10px;
       margin-bottom: 20px;
