--- a/src/Pages/Donation/donation.css
+++ b/src/Pages/Donation/donation.css
@@ -1,19 +1,21 @@
 .donation-image-container{
     width:100%;
-    height: 620px;
+    height: 450px;
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
+    
 }
 .donate-img{
 height: 100%;
 width: 93%;
-border-radius: 10px;
+border-radius: 0px 0px 14px 14px;
 }
+                          /*Why Donate US Content starts*/
+
 .why-donate-Us-container{
     display: flex;
     justify-content: center;
-    gap: 2rem;
+    gap: 1rem;
     margin-top: -20px;
     /* flex-direction: row; */
     /* justify-content: space-around; */
@@ -22,11 +24,12 @@ border-radius: 10px;
 .why-donate-Us-content{ 
 
     width: 620px;
-     height: 350px;
+     height: auto;
 
     /* border-radius: 40px; */
     margin: 15px;
     margin-top: 25px;
+    margin-right: 140px;
     padding: 20px;
     font-size: 25px;
   
@@ -42,18 +45,21 @@ border-radius: 10px;
 
  .para_D{
   font-family: Poppins;
-  width: 570px;
+  width: 670px;
   text-align: left;
-font-size: 14px;
-margin-bottom: 20px;
+font-size: 15px;
+margin-bottom: 18px;
 
 /* margin: 0px;
 padding: 0px; */
 }
+                      /*Why Donate US Content Ends*/
+                        /* Donation-Form Starts*/
 
 #donation-form{
     /* border: 2px solid black; */
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    
     margin-top: 90px;
     padding: 30px;
     border-radius: 12px;
@@ -104,22 +110,28 @@ padding: 0px; */
     outline: none;
     height: 40px;
     text-align: center;
-    width: 200px;
+    width: 80%;
     border-radius: 40px;
    background-color: #eeee33;
-    color: #251f0a;
-   
+   /* background-color: #ffd852; */
+    /* color: #251f0a;
+   color: #0F1111; */
+   color: #232f3e;
     font-size: 15px;
     font-weight: 700;
     /* margin-left: 28%; */
     margin: 10px 10px 10px 10px;
     cursor: pointer;
-    border: 2px solid #eeee33;
+    border: none;
     transition: all 0.25s ease;
 }
 
 .donate:hover{
     background: #fff;
-    color: #251f0a;
-    border: 3px solid #eeee83;
+    color: #232f3e;
+    /* color: #251f0a;
+    border: 3px solid #eeee83; */
+    border: 2px solid #ffd852;
 }
+                  
+                        /* Donation-Form Ends*/
