--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -33,8 +33,8 @@ body {
   box-shadow: 0px 0px 11px 3px rgba(0, 0, 0, 0.15);
   opacity: 0;
   pointer-events: none;
-  transform: scale(0.98);
-  transition: 0.3s ease-in-out; 
+  transform: scale(0.99);
+  transition: 0.4s ease-in-out; 
   
 }
 
@@ -60,10 +60,10 @@ body {
   align-items: flex-end;
 }
 
-.card_title {
+/* .card_title {
   color: white;
   font-size: 30px;
-}
+} */
 
 .carousel_arrow_left,
 .carousel_arrow_right {
@@ -75,13 +75,15 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 45px;
-  height: 45px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   padding: 0px 0px 5px 5px;
   cursor: pointer;
 }
-
+.carousel_arrow_left p, .carousel_arrow_right p{
+  margin-bottom: 6px;
+}
 .carousel_arrow_left {
   left: 15px;
 }
@@ -117,7 +119,7 @@ body {
 
                                /*  Carousel ends     */
                            /*  Goal Starts  */
-  .grid-container{
+  .grid-container-goals{
     display: grid;
     grid-gap: 1rem;
     grid-template-columns: 175px 175px 175px 175px 175px 175px;
@@ -148,14 +150,14 @@ body {
     .suggestion-container{
       display: flex;
       flex-wrap: wrap;
-
+margin: 30px;
       justify-content: center;
     }
     
     .suggestion-content{ 
     
        width: 544px;
-       height: 350px;
+       height: 300px;
        border-radius: 40px;
       margin: 1px;
       margin-top: 25px;
@@ -166,15 +168,25 @@ body {
     
     }
     
-    .para_S{
+    .suggestion-content h1, .suggestion-content p{
+      text-align: justify;
+      justify-content: left; 
+      font-family: 'Poppins';
+      margin: 9px 0px 13px 0px;
+    }
+    .suggestion-content p{
+     font-size: 17px;
+     margin: 0px;
+    }
+     /* .para_S{
       padding-top: 0px;
      text-align: justify;
-      /* justify-content: left; */
+      justify-content: left; 
       font-family: 'Poppins';
-    }
-    
+    }*/
+     
     #suggestion-form {
-      width: 400px;
+      width: 500px;
       margin: 50px auto;
       padding: 20px;
       border-radius: 10px;
@@ -200,16 +212,26 @@ body {
    .sugg-select,
    textarea {
       width: calc(100% - 12px);
-      padding: 10px;
+      padding: 2px;
+     height: 40px;
       margin-bottom: 20px;
       border: 1px solid #ccc;
       border-radius: 5px;
       box-sizing: border-box;
       background-color: #f9f9f9;
     }
-  
+  option{
+    /* height: 10px; */
+   font-family: 'poppins';
+  }
     textarea {
+      outline: none;
+      height: auto;
+      text-align: left;
       resize: vertical; 
+      font-family: 'poppins';
+      padding: 7px;
+      font-size: 15px;
     }
     
     input[type="submit"] {
