--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -13,7 +13,7 @@ body {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     position: sticky;
     top: 0%;
-  z-index: 999;
+  z-index: 997;
     height: 79px;
   }
   .active{
@@ -91,7 +91,7 @@ body {
   }
   
   li:hover {
-    background-color: #b8b0b0;
+    background-color: #1e1d1d;
     color: white;
   }
   #search-panel {
@@ -106,8 +106,8 @@ border: 1px solid #a48139;
   #search-input {
     padding: 10px;
     border: none;
-    width: 300px;
-   
+    width: 250px;
+   outline: none;
     text-align: left;
     border-radius: 5px;
   }
