--- a/src/components/popup.css
+++ b/src/components/popup.css
@@ -23,7 +23,7 @@ font-size: 18px;
     overflow: auto;
 }
 .modal{
-    z-index: 600;
+    z-index: 998;
 }
 .overlay{
     background: rgba(49,49,49,0.8);
@@ -32,7 +32,7 @@ font-size: 18px;
 }
 .modal-content {
     position: absolute;
-    top: 60%;
+    top: 53%;
     left: 50%;
    
     transform: translate(-50%, -50%);
@@ -166,8 +166,8 @@ option{
     text-align: center;
     width: 230px;
     border-radius: 40px;
-   /* background-color: #1ECD97; */
-   background-color: #1ecd35;
+ 
+   background-color: #42b72a;
     color: #fff;
    
     font-size: 15px;
