--- a/src/Pages/GetInvolved/style.css
+++ b/src/Pages/GetInvolved/style.css
@@ -10,8 +10,6 @@ body {
    .gi-container{
     width: 100%;
     height: 445px;
-   /* background: url(/public/Images/gi-bg.png)  center/cover no-repeat; */
-   /* background-size: auto; */
    }                  
  img {
     width: 100%;
@@ -50,11 +48,12 @@ body {
 .whyUs-container p{
   font-size: 17px;
 }
-.para_W{
+.whyUs-content p, .whyUs-content h1{
   font-family: Poppins;
   text-align: left;
   margin: 0px;
 }
+
 .btn{
     padding: 16px 100px;
     border: 2px solid white;
@@ -64,6 +63,7 @@ body {
     margin: 17px;
     font-size: 1.5rem;
     font-weight: 900;
+    box-sizing: border-box;
     transition: all 0.3s ease-in;
     border-radius: 45px;
     cursor:pointer;
