--- a/src/Pages/AboutUs/about.css
+++ b/src/Pages/AboutUs/about.css
@@ -20,6 +20,7 @@ height: 485px;
   border-radius: 0px 0px 14px 14px;
  
  }
+                     /*STATEMENT STARTS*/
 #statement-container{
   margin: 34px;
   display: flex;
@@ -45,6 +46,8 @@ height: 485px;
   padding: 12px 0px 0px 0px;
   margin: 0px;
 }
+                              /*STATEMENT ENDS*/ 
+                                /*INTRO SECTION STARTS*/ 
 #intro{
   margin: 34px;
   display: flex;
@@ -58,10 +61,10 @@ height: 485px;
 }     
 
 
-.img7{
+/* .img7{
   height: 200px;
   width: 200px;
-  }
+  } */
 .about-box{ 
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
  padding: 34px;
@@ -103,6 +106,9 @@ height: 485px;
   height: 175px;
   width: 175px;
 }
+
+                             /*INTRO SECTION ENDS*/ 
+                             /*LEADERSHIP STARTS*/
 .leadership-container{
   display: flex;
    align-items: center;
@@ -137,14 +143,83 @@ transform-style: preserve-3d;
 backface-visibility: hidden;
 transition: all 0.4s ease-in-out;
 }
+
+.flip-card-container {
+  background-color: transparent;
+  width: 235px;
+  height: 300px;
+  perspective: 1000px;
+  border-radius: 10px;
+}
+
+.flip-card {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.flip-card-container:hover .flip-card {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+ 
+  background-color: #edecec;
+  color: black;
+}
+
+.flip-card-front img{
+  width: 88%;
+ margin: 10px auto 0px auto;
+  height: 74%;
+  border-radius: 5px;
+}
+.flip-card-front h3, .flip-card-front p{
+margin: 0px 0px 0px 15px;
+text-align: left;
+
+}
+.flip-card-back {
+  background-color: #b6bec4;
+
+background-image: linear-gradient(45deg, #93a5cf 0%, #e4efe9 100%);
+  color: rgb(6, 0, 0);
+  transform: rotateY(180deg);
+  font-size: 10px;
+}
+.flip-card-back p{
+  text-align: left;
+  padding: 0px 20px;
+  font-size: 13px;
+}
+.flip-card-back h1 {
+margin: 20px 0px 0px 20px;
+text-align: left;
+}
+
 .about-box:hover{
 transform: scale(1.1);
 transform: rotateY(180deg);
 }
-.img7{
+                               /*LEADERSHIP ENDS*/
+/* .img7{
   height: 200px;
   width: 200px;
-  }
+  } */
  .image-container{
   overflow: hidden;
  }
@@ -185,7 +260,7 @@ transform: rotateY(180deg);
       border: 0.3px solid black;
     
   }
-  
+                             /*TECHNICAL TEAM STARTS*/
   .technical-team{
       display: flex;
       justify-content: center;
@@ -216,77 +291,11 @@ transform: rotateY(180deg);
       object-fit: cover;
       transition: all 0.2s ease-in-out;
   }
-  .technical-member img:hover,.media-image:hover, .img4:hover{
+  .technical-member img:hover,.media-image:hover, .work-image:hover{
   transform: scale(1.1);
    
   }
 
+                    /*TECHNICAL TEAM ENDS*/
 
-
-  .flip-card-container {
-    background-color: transparent;
-    width: 235px;
-    height: 300px;
-    perspective: 1000px;
-    border-radius: 10px;
-  }
-  
-  .flip-card {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    text-align: center;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  }
-  
-  .flip-card-container:hover .flip-card {
-    transform: rotateY(180deg);
-  }
-  
-  .flip-card-front, .flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    border-radius: 8px;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-  }
-  
-  .flip-card-front {
-   
-    background-color: #edecec;
-    color: black;
-  }
-  
-  .flip-card-front img{
-    width: 88%;
-   margin: 10px auto 0px auto;
-    height: 74%;
-    border-radius: 5px;
-  }
-.flip-card-front h3, .flip-card-front p{
-  margin: 0px 0px 0px 15px;
-  text-align: left;
  
-}
-  .flip-card-back {
-    background-color: #b6bec4;
-
-background-image: linear-gradient(45deg, #93a5cf 0%, #e4efe9 100%);
-    color: rgb(6, 0, 0);
-    transform: rotateY(180deg);
-    font-size: 10px;
-  }
-  .flip-card-back p{
-    text-align: left;
-    padding: 0px 20px;
-    font-size: 13px;
-  }
-.flip-card-back h1 {
-  margin: 20px 0px 0px 20px;
-  text-align: left;
-}
-  
