--- a/src/Pages/AboutUs/about.css
+++ b/src/Pages/AboutUs/about.css
@@ -178,7 +178,7 @@ transition: all 0.4s ease-in-out;
 
 .flip-card-front {
  
-  background-color: #edecec;
+  background-color: #e7e4e4c8;
   color: black;
 }
 
