--- a/src/Pages/Donation/donation.css
+++ b/src/Pages/Donation/donation.css
@@ -62,6 +62,14 @@ border-radius: 0px 0px 14px 14px;
     padding: 30px;
     border-radius: 12px;
 }
+#donation-form label{
+    margin-left: 0px;
+    width: fit-content;
+    margin-bottom: 4px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+      font-weight: 500;
+}
 .parikranti-image{
     width: 160px;
     height: 40px;
