--- a/src/Pages/GetInvolved/style.css
+++ b/src/Pages/GetInvolved/style.css
@@ -53,26 +53,26 @@ body {
   text-align: left;
   margin: 0px;
 }
-
 .btn{
-    padding: 16px 100px;
-    border: 2px solid white;
-    border: border-box;
-    background-color:rgb(228, 15, 15);
-    color: white;
-    margin: 17px;
-    font-size: 1.5rem;
-    font-weight: 900;
-    box-sizing: border-box;
-    transition: all 0.3s ease-in;
-    border-radius: 45px;
-    cursor:pointer;
-  }
+height: 66px;
+width: 300px;
+font-size: 1.5rem;
+font-weight: 800;
+border: none;
+background-color:rgb(228, 15, 15);
+color: white;
+border-radius: 45px;
+margin: 30px;
+cursor: pointer;
+transition: all 0.3s ease-in;
+
+}
+
   .btn:hover{
     background-color: white;
-    color: black;
-    border: 2.5px solid red;
-    box-shadow: 0 0 100px rgba(231, 85, 85, 0.2);
+      color: black;
+      cursor: pointer;
+    border: 2.5px solid rgb(228, 15, 15);
   }
                           
                             /* Why-Us Ends */
