--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -35,7 +35,7 @@ body {
     margin-right: 20px;  
     border-radius: 50%;
     }
-  .user_name{
+  #sign p{
     color: #333;
     font-size: 12px;
     font-weight: 400;
@@ -84,7 +84,7 @@ body {
     font-weight: 400;
     font-size: 17px;
     text-align: center;
-    padding: 17px 23px;
+    padding: 17px 20px;
     margin-top: 11px;
     border-radius: 40px;
     text-decoration: none;
@@ -92,6 +92,7 @@ body {
   
   li:hover {
     background-color: #1e1d1d;
+    
     color: white;
   }
   #search-panel {
@@ -112,5 +113,18 @@ border: 1px solid #a48139;
     border-radius: 5px;
   }
   
+  .donate-button{
+   height: 50px;
+   width: 160px;
+   border-radius: 30px;
+   cursor: pointer;
   
+   background-image: linear-gradient(to left, #00c6fb 0%, #005bea 100%);
+border: none;
+font-size: 17px;
+color: white;
+margin-top: 15px;
+margin-left: 50px;
+font-family: 'Arial';
+  }
  
