--- a/src/components/popup.css
+++ b/src/components/popup.css
@@ -81,21 +81,6 @@ font-size: 18px;
     padding: 6px 10px;
     background-color: transparent;
 }
-
-form{
-    display: flex;
-    flex-direction: column;
-    width: auto;
-    flex-wrap: wrap;
-}
-.form_label {
-    margin-left: 0px;
-  width: fit-content;
-  margin-bottom: 4px;
-  font-family: 'Poppins', sans-serif;
-  font-size: 14px;
-    font-weight: 500;
-}
 .text-image{
     display: flex;
     justify-content: center;
@@ -114,6 +99,14 @@ form{
     font-size: 30px;
     margin-top: 0px;
 }
+form{
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    flex-wrap: wrap;
+}
+
+
 .my-fields{
     display: flex;
     flex-direction: row;
@@ -125,9 +118,34 @@ form{
     display: flex;
     flex-direction: column;
 }
-/* #phone_no{
-    width: 125px;
-} */
+.field label{
+    margin-left: 0px;
+    width: fit-content;
+    margin-bottom: 4px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+      font-weight: 500;
+}
+.field input{
+    margin-bottom: 10px;
+    text-align: left;
+     height: 26px;
+     font-family: 'Poppins', sans-serif;
+     width: 200px;
+     font-size: 14px;
+     border-radius: 5px;
+     outline: none;
+     border: 2px solid rgb(221, 213, 213);
+}
+
+.form_label {
+    margin-left: 0px;
+  width: fit-content;
+  margin-bottom: 4px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 14px;
+    font-weight: 500;
+}
 .form_input {
    margin-bottom: 10px;
    text-align: left;
@@ -167,17 +185,13 @@ option{
     text-align: center;
     width: 230px;
     border-radius: 40px;
- 
-   background-color: #42b72a;
-   background-image: linear-gradient(to right, #43e97b 0%, #38f9d7 100%);
+ background-image: linear-gradient(to right, #43e97b 0%, #38f9d7 100%);
     color: #fff;
-   
     font-size: 15px;
     font-weight: bold;
     margin-left: 25%;
     margin-top: 10px;
     cursor: pointer;
-    /* border: 2px solid #1ECD97; */
     border: none;
     transition: all 0.25s ease;
 
