--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -122,7 +122,7 @@ body {
   .grid-container-goals{
     display: grid;
     grid-gap: 1rem;
-    grid-template-columns: 175px 175px 175px 175px 175px 175px;
+    grid-template-columns: 185px 185px 185px 185px 185px 185px;
     justify-content: center;
     }
     
@@ -135,22 +135,69 @@ body {
     font-family: sans-serif,'Arial', Times, serif;
     }                          
     .goal-icon{
-    height: 175px;
-    width: 175px;
+    height: 100%;
+    width: 100%;
     transition: all 0.1s ease-in;
     border-radius: 15px;
     }
     .goal-icon:hover{
       transform: scale(1.05);
-      cursor: pointer;
+    
     }
                                /*  Goal Ends  */
-                        /* suggestion box starts*/
+  .image-container{
+  overflow: hidden;
+ }
+  .gallery {
+      display: grid;
+      grid-gap: 10px;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-auto-rows: 200px;
+      grid-auto-flow: dense;
+      margin-left: 7%;
+      margin-right: 7%;
+    
+      width: 85%;
+  }
+  .gallery > div {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+  }
+  .gallery > div > img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 5px;
+  }
+  .gallery .tall {
+      grid-row: span 2;
+  }
+  .image-container img{
+      max-width: 100%;
+      height: auto;
+      vertical-align: middle;
+      display: inline-block;
+      transition: all 0.2s ease-in-out;
+  }
+  .media-image { 
+    
+      border: 0.3px solid black;
+    
+  }
+
+  .media-image:hover, .work-image:hover{
+    transform: scale(1.1);
+     
+    }
+  
+                               /* suggestion box starts*/
     
     .suggestion-container{
       display: flex;
       flex-wrap: wrap;
 margin: 30px;
+
       justify-content: center;
     }
     
