--- a/src/components/donation/donation.css
+++ b/src/components/donation/donation.css
@@ -125,7 +125,7 @@ border-radius: 0px 0px 14px 14px;
     font-size: 15px;
     font-weight: 700;
     
-    margin: 10px 10px 10px 10px;
+    margin: 10px;
     cursor: pointer;
     border: none;
     transition: all 0.25s ease;
