--- a/src/components/indexPage/indexPage.css
+++ b/src/components/indexPage/indexPage.css
@@ -1,5 +1,5 @@
 
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -11,7 +11,7 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
 body{
   background-color: whitesmoke;
   text-align: center;
