--- a/src/components/getInvolved/style.css
+++ b/src/components/getInvolved/style.css
@@ -1,10 +1,3 @@
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  text-align: center;
-  padding: 0;
-  background-color: white;
-}
 
 .gi-container {
   width: 100%;
@@ -25,6 +18,7 @@ img {
 .whyUs-container {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .whyUs-content {
@@ -37,18 +31,19 @@ img {
   padding: 20px;
   font-size: 18px;
 }
-.whyUs-container h1 {
-  margin-bottom: 15px;
-}
-.whyUs-container p {
-  font-size: 17px;
-}
 .whyUs-content p,
 .whyUs-content h1 {
   font-family: Poppins;
   text-align: left;
   margin: 0px;
 }
+.whyUs-container h1 {
+  margin-bottom: 15px;
+}
+.whyUs-container p {
+  font-size: 17px;
+}
+
                                     /* Why-Us Ends */
 .btn {
   height: 66px;
@@ -95,7 +90,7 @@ img {
 }
 .slider-container {
   display: flex;
-  width: 1200px;
+  width: 80%;
   overflow: hidden;
   user-select: none;
 
