--- a/src/components/popup.css
+++ b/src/components/popup.css
@@ -1,17 +1,6 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-
 body.active-modal{
     overflow-y: hidden;
 }
-.btn-model{
-padding: 10px 20px;
-display: block;
-margin: 100px auto 0;
-font-size: 18px;
-
-}
-
 .modal, .overlay{
     width: 100vw;
     height: 100vh;
@@ -27,55 +16,66 @@ font-size: 18px;
 }
 .overlay{
     background: rgba(49,49,49,0.8);
-
-    
-}
-.modal-content {
-    position: absolute;
-    top: 53%;
-    left: 50%;
    
-    transform: translate(-50%, -50%);
-
-    line-height: 1.4;
-   background-color: #f1f1f1;
-    padding: 14px 33px;
-    opacity: 1;
-   border-radius: 15px;
-    box-shadow: 0px 8px 16px rgba(0,0,0, 0.3);
-    max-width: 900px;
-    min-width: 300px;
-    animation: fadeIn 0.3s ease-in-out, slideUp 0.5s ease-in-out; 
+        z-index: 995;
+    
 }
 @keyframes fadeIn {
     from {
       opacity: 0;
+      scale: 0.3;
     }
     to {
+        scale: 1;
       opacity: 1;
     }
-  }
+  } 
+
+.center2{
+    color: rgb(5, 1, 1);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 998;
+}
+.popup-content{
   
-  @keyframes slideUp {
-    from {
-      transform: translateY(0%,-50%);
-    }
-    to {
-      transform: translateY(-50%,-50%);
-    }
-  }
-  
+animation: fadeIn 0.4s ease-in-out; 
+
+width: 100%;
+display: flex;
+flex-direction: column;
+max-width: 620px;
+background: rgb(209, 206, 206);
+background-color: #ffffff;
+border-radius: 10px;
+box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    flex-wrap: wrap;
+justify-content: space-between;
+
+margin: 0;
+padding: 0;
+
+}
+
+.popup-content.active{
+    opacity: 1;
+      top: 65%;
+
+}
+
 #cross_img{
-    height: 20px;
-    width: 20px;
+    height: 30px;
+    width: 30px;
     cursor: pointer;
 }
 .close-modal {
     position: absolute;
-    top: 15px;
+    top: 30px;
 
-    color: white;
-    right: 14px;
+    /* color: white; */
+    right: 20px;
     border-radius: 20px;
     border: rgb(228,15,15);
     padding: 6px 10px;
@@ -86,121 +86,214 @@ font-size: 18px;
     justify-content: center;
 }
 .text-image img{
-    padding-top: 20px;
-    height: 40px;
+    padding-top:30px;
+    height: auto;
     margin: 5px;
-    width: auto;
+    width: 35%;
+    animation: fadeIn 0.4s ease-in-out; 
     
+    animation-delay: 200ms;
+ 
+    animation-fill-mode: backwards;
 }
 .title{
-    font-family: sans-serif;
-    margin-bottom: 20px;
-    font-weight: 900;
-    font-size: 30px;
-    margin-top: 0px;
+ 
+    text-align: center;
+    font-size: 28px;
+    font-weight: 600;
+    font-family:  sans-serif;
+    color: #313030;
+    margin: 9px;
+   
+    animation: fadeIn 0.4s ease-in-out; 
+    animation-delay: 300ms;
+    animation-direction: backwards;
+    animation-fill-mode: backwards;
 }
-form{
+.outer-cover{
     display: flex;
-    flex-direction: column;
-    width: auto;
+ justify-content: center;
+ align-items: center;
+ margin: 0;
+padding: 0; /* background-color: #1ECD97; */
+}
+.redux-container{
+    width: 100%;
+    display: flex;
+    /* flex-direction: column; */
+    max-width: 550px;
+    background: rgb(209, 206, 206);
+    background-color: #ffffff;
+    border-radius: 10px;
+  
+    animation: fadeIn 0.4s ease-in-out; 
+    animation-delay: 250ms;
+ 
+    animation-fill-mode: backwards;
     flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 20px 0;
+    padding: 10px 33px 33px 33px; 
+  
 }
+.redux-container:nth-child(2n){
+    justify-content: flex-end;
+  
+}
+  .form-field{
 
-
-.my-fields{
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
-    gap: 30px;
-}
-.field{
-    display: flex;
-    flex-direction: column;
-}
-.field label{
-    margin-left: 0px;
-    width: fit-content;
-    margin-bottom: 4px;
-    font-family: 'Poppins', sans-serif;
+    width: 48%;
+    padding-bottom: 15px;
+  }
+  .form-field label{
+    
     font-size: 14px;
-      font-weight: 500;
-}
-.field input{
-    margin-bottom: 10px;
-    text-align: left;
-     height: 26px;
-     font-family: 'Poppins', sans-serif;
-     width: 200px;
-     font-size: 14px;
-     border-radius: 5px;
-     outline: none;
-     border: 2px solid rgb(221, 213, 213);
-}
-
-.form_label {
-    margin-left: 0px;
-  width: fit-content;
-  margin-bottom: 4px;
-  font-family: 'Poppins', sans-serif;
-  font-size: 14px;
     font-weight: 500;
-}
-.form_input {
-   margin-bottom: 10px;
-   text-align: left;
-    height: 26px;
+    color: #2e2e2e;
     font-family: 'Poppins', sans-serif;
-    width: 200px;
+}
+
+.form-field input,.form-field option, .form-field select{
+    height: 40px;
+    width: 97%;
+    border-radius: 7px;
+    text-align: left;
+    outline: none;
+    border: 1px solid grey;
+    padding: 0 10px;
+}
+.form-field input ,.form-field select, .form-field textarea{
+    outline: none;
+    font-family: 'Poppins', sans-serif;
     font-size: 14px;
+    font-weight: 400;
+    color: #333;
     border-radius: 5px;
-    outline: none;
-    border: 2px solid rgb(221, 213, 213);
+    border: 1px solid #aaa;
+    padding: 0 15px;
+    height: 42px;
+    margin: 8px 0;
+    transition: all 0.15s ease-in;
 }
-select{
-    height: 26px;
-    width: 200px;
-    margin-bottom: 10px;
-    text-align: left;
-    outline: none;
-}
-option{
-    text-align: left;
-   outline: none;
-}
-.form_textarea{
+.form-field textarea{
     font-family: 'Poppins', sans-serif;
     text-align: left;
     margin-bottom: 14px;    
-     width: 434px;
-     height: 80px;
-     outline: 0cap;
+    height: 80px;
+    width: 99%;
+    padding:  10px;
      font-size: 14px;
      border-radius: 5px;
      border: 2px solid rgb(221, 213, 213);
 }
-.form_sub{
-    outline: none;
-    height: 40px;
-    text-align: center;
-    width: 230px;
-    border-radius: 40px;
- background-image: linear-gradient(to right, #43e97b 0%, #38f9d7 100%);
-    color: #fff;
-    font-size: 15px;
-    font-weight: bold;
-    margin-left: 25%;
-    margin-top: 10px;
+.form-field input:focus,
+.form-field select:focus,
+.form-field textarea:focus{
+    box-shadow: 0 3px 6px rgba(0,0,0,0.13);
+}
+.gender-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 48%;
+}
+.gender-title{
+  
+    font-size: 14px;
+    font-weight: 500;
+    text-align: left;
+    margin-bottom: 19px;
+    color: #2e2e2e;
+    color: #333;
+    font-family: 'Poppins', sans-serif;
+}
+
+
+.radio{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    gap: 25px;
+    font-family: 'Poppins', sans-serif;
+}
+.radio label, .radio input{
     cursor: pointer;
-    border: none;
+    font-size: 14px;
+}
+.gender-category{
+    display: flex;
+    flex-direction: row;
+    margin: 15px 0;
+    color: rgb(15, 1, 1);
+}
+
+
+.gender-category label{
+    padding: 0 20px 0 5px;
+ 
+}
+
+#text-field{
+    width: 100%;
+}
+
+
+
+@media(max-width: 600px){
+    .redux-container{
+        min-width: 280px;
+    }
+
+    .form-field{
+        margin-bottom: 12px;
+        width: 100%;
+    }
+    .popup-content.active{
+        top: 30%;
+      }
+    .form-field:nth-child(2n){
+        justify-content: space-between;
+    }
+
+    .gender-category{
+        display: flex;
+        justify-content: flex-start;
+        width: 100%;
+    }
+
+    .redux-container{
+        max-height: 380px;
+        overflow: auto;
+    }
+
+    .redux-container::-webkit-scrollbar{
+        width: 0;
+    }
+}
+
+
+.form_sub{
+   
+    width: 100%;
+    margin-top: 1px;
+    padding: 10px 0px;
+    background: #6fd649;
+    color: #fff;
+    border: 0;
+    outline: none;
+    font-size: 18px;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0 2px 5px rgba(0,0,0, 0.2);
     transition: all 0.25s ease;
+    animation-delay: 600ms;
+   
+    animation-fill-mode: backwards;
 
 }
 .form_sub:hover{
-    background: #fff;
-    color: #1ECD97;
-    border: 2px solid #1ECD97;
-}
-input:focus{
-  border: 1px solid #a48139;
+    
+    box-shadow: 0 3px 6px rgba(0,0,0,0.3);
 }
