--- a/src/components/aboutUs/about.css
+++ b/src/components/aboutUs/about.css
@@ -51,7 +51,17 @@ height: 485px;
   color: #313030;
 
 }     
-
+#heading::after {
+  content: "";
+  display: block;
+  position: relative;
+  height: 6px;
+  background: #854403;
+  width: 240px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 14px;
+}
 .intro-box{
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   padding: 20px 34px;
